# yarr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_run.sh  video.avi
include/: canvas.cuh  canvas.h  cuda_utils.cuh  input.cuh  renderobject.cuh  settings.cuh  triangle.cuh  utils.cuh  utils.h  vector.cuh
include/glad/: glad.h
include/light/: point.cuh
include/linear_algebra/: rotation_matrix.cuh  vector.cuh
include/renderobjects/: octahedron.cuh  renderobject.cuh  sphere.cuh  triangle.cuh
include/utils/: cuda_utils.cuh  list.cuh  settings.cuh  utils.cuh  vector.cuh
src/: canvas.cu  glad.c  input.cu  main.cu  renderobject.cu  test.c  triangle.cu  utils.cu  vector.cu
src/renderobjects/: renderobject.cu  sphere.cu  triangle.cu
src/utils/: cuda_utils.cu  utils.cu
